--- a/index.html
+++ b/index.html
@@ -2,44 +2,46 @@
 <html lang="en">
 <head>
   <title>Nicholas Pittsey Portfolio</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, intitial-scake=1">
-  <script type="text/javascript" src="chrome-extension://bfbmjmiodbnnpllbbbfblcplfjjepjdn/js/injected.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="js/jquery-2.1.4.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
   <body>
 
-<div class="top-header text-center">
-    <h1 class="title-super text-thin">Nicholas Pittsey |</h1>
-    <h2> Front-End Web Developer</h2>
-</div>
   <div class="container">
-    <div class="row top-padding">
-      <div class="col-md-2 text-center"> </div>
-      <div class="col-md-8 text-center text-large">
-        <p>I'm a front-end web designer that focuses on building beautiful websites using HTML5, CSS3, Javascript/jQuery with mobile responsiveness in mind and fast load times.</p>
+    <header class="top-header text-center">
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+          <h1 class="title-super text-thin">Nicholas Pittsey |</h1>
+          <h2> Front-End Web Developer</h2>
+        </div>
+        <div class="col-md-1"></div>
       </div>
       <div class="row">
-          <div class="col-md-12">
-            <hr>
-          </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+          <p>I'm a front-end web designer that focuses on building beautiful websites using HTML5, CSS3, Javascript/jQuery with mobile responsiveness in mind and fast load times.</p>
+        </div>
+        <div class="col-md-2"></div>
       </div>
-      <div class="col-md-2 text-center"> </div>
-    </div>
+        <hr>
+    </header>
+
     <div class="row">
       <div class="col-md-12">
         <h3>Featured Work</h3>
       </div>
     </div>
     <div class="row pdescription bottom-buffer">
-      <div class="col-md-12">
+      <article class="col-md-12">
         <input class="img-responsive img-center img-style center-single" type="image" src="images/fs-full-thumb.jpg" data-toggle="modal" data-target="#project0" alt="first look salon" />
       <h4>First Look Salon</h4>
       <!-- Modal -->
@@ -59,11 +61,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </article>
     </div>
 
     <div class="row pdescription bottom-buffer">
-      <div class="col-md-6 img-mb">
+      <article class="col-md-6 img-mb">
           <input class="img-responsive img-center img-style" type="image" src="images/aa-full-thumb.jpg" data-toggle="modal" data-target="#project1" alt="about agilent" />
         <h4>About Agilent Redesign</h4>
 
@@ -84,9 +86,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </article>
 
-      <div class="col-md-6 img-mb">
+      <article class="col-md-6 img-mb">
         <input class="img-responsive img-center img-style" type="image" src="images/adpp-full-thumb.jpg" data-toggle="modal" data-target="#project2" alt="action day primary plus" />
         <h4>Action Day Primary Plus</h4>
 
@@ -107,11 +109,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </article>
     </div>
 
   <div class="row pdescription bottom-row">
-    <div class="col-md-6 img-mb">
+    <article class="col-md-6 img-mb">
       <input class="img-responsive img-center img-style" type="image" src="images/cpc-full-thumb.jpg" data-toggle="modal" data-target="#project3" alt="cpc constructors" />
       <h4>Command Performance Constructors</h4>
 
@@ -132,9 +134,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </article>
 
-    <div class="col-md-6 img-mb">
+    <article class="col-md-6 img-mb">
       <input class="img-responsive img-center img-style" type="image" src="images/ahc-full-thumb.jpg" data-toggle="modal" data-target="#project4" alt="agilent history center"/>
       <h4>Agilent History Center</h4>
 
@@ -155,7 +157,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </article>
   </div>
 </div>
 
